--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-scroll": "^1.8.2",
     "react-slick": "^0.28.1",
     "react-toastify": "^8.1.0",
+    "recharts": "^2.1.6",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
