--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.1",
     "date-format": "^3.0.0",
+    "emailjs-com": "^3.2.0",
     "format-date": "^1.0.0",
     "formik": "^2.2.9",
     "mui-datatables": "^3.0.0",
     "node-sass": "^6.0.1",
+    "qrcode": "^1.5.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
