--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "mongoose-slug-generator": "^1.0.4",
     "multer": "^1.4.3",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.14",
     "validator": "^13.6.0"
   }
